fixes padding top in index css so that header isn't covering anything

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   padding-left: 1cm;
+  padding-top: 2cm;
 }
 
 a {
